Added more methods and examples
Updated:
UIDeleteTableCell
Added:
UISpinner
UIPopUp
UIBlock
UIUnblock
UISelectionList

--- a/examples/navigation-list-1.html
+++ b/examples/navigation-list-1.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=0;">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <title>Tableviews 1</title>
-    <link rel="stylesheet" href="chui/chui.css">
-    <script src="chui/jquery-1.6.4.js"></script>
-    <script src="chui/chui.js"></script>
-    <script src="chui/iscroll.js"></script>
+    <link rel="stylesheet" href="../chui/chui.css">
+    <script src="../chui/jquery-1.6.4.js"></script>
+    <script src="../chui/chui.js"></script>
+    <script src="../chui/iscroll.js"></script>
     <script>
         $(function() {
         	$('uibutton[ui-implements="bozo"]').bind("click", function() {
