Update for iScroll, Segmented Control and TabBar

--- a/examples/json-form-submit-1.html
+++ b/examples/json-form-submit-1.html
@@ -33,6 +33,8 @@
 				form data into a JSON object. To learn more about how to
 				set up a form to use with this, please read the documentation
 				for ChocolateChip's form2JSON method. It's exactly the same.
+				**Hint** Look at how the form elements are named below.
+				That describes how the JSON object will be created.
 			*/
             var formData = $.form2JSON('#userForm');
             var data = JSON.stringify(formData);
