--- a/examples/tabbar_manual.html
+++ b/examples/tabbar_manual.html
@@ -54,14 +54,15 @@
 				 selectedSegment : 2,
 				 cssClass : ["ui-custom-tint", "ui-custom-tint", "ui-custom-tint", "ui-custom-tint"],
 				 imagePath : "../icons/",
-				 container : "#stackpanel_01"
+				 container : "stackpanel_01"
 			};
 			$("scrollpanel > stack:first-of-type").UICreateSegmentedControl(seg);
 			var seggie = function(item) {
-				console.log("The child position is: " + item.getAttribute("ui-child-position"));
-			}
-			$("segmentedcontrol").UISegmentedControl("#stackpanel_01", seggie);
+				console.log("The child position is: " + item.attr("ui-child-position"));
+			};
 			$("#stackpanel_01").UIIdentifyChildNodes();
+			$("segmentedcontrol").UISegmentedControl("#stackpanel_01", seggie);
+
 			
 			$("#main").UITabBar();
 		});
@@ -287,23 +288,23 @@
 			</subview>
 			<tabbar ui-selected-tab="0">
 				<uibutton ui-implements="tab">                
-					<icon style="-webkit-mask-box-image: url(icons/refresh.svg);"></icon>
+					<icon style="-webkit-mask-box-image: url(../icons/refresh.svg);"></icon>
 					<label>Refresh</label>         
 				</uibutton>
 				<uibutton ui-implements="tab">                
-					<icon style="-webkit-mask-box-image: url(icons/add.svg);"></icon>
+					<icon style="-webkit-mask-box-image: url(../icons/add.svg);"></icon>
 					<label>Add</label>  
 				</uibutton>
 				<uibutton ui-implements="tab">                
-					<icon style="-webkit-mask-box-image: url(icons/info.svg);"></icon>
+					<icon style="-webkit-mask-box-image: url(../icons/info.svg);"></icon>
 					<label>Info</label>   
 				</uibutton>
 				<uibutton ui-implements="tab">                
-					<icon style="-webkit-mask-box-image: url(icons/downloads.svg);"></icon>
+					<icon style="-webkit-mask-box-image: url(../icons/downloads.svg);"></icon>
 					<label>Downloads</label>                
 				</uibutton>
 				<uibutton ui-implements="tab">                
-					<icon style="-webkit-mask-box-image: url(icons/top_rated.svg);"></icon>
+					<icon style="-webkit-mask-box-image: url(../icons/top_rated.svg);"></icon>
 					<label>Favorite</label>                
 				</uibutton>
 			</tabbar>
