Updated Deletion List examples for localization.

--- a/examples/deletion_list-icons.html
+++ b/examples/deletion_list-icons.html
@@ -13,9 +13,9 @@
 		$(function() {
 			$("tableview:first-of-type").UIIdentifyChildNodes();
 			var deleteItem = function(item) {
-				$("tablefooter").append("<p>You deleted table cell " +  (parseInt(item.getAttribute("ui-child-position"),10)+1) + "</p>");
+				$("tablefooter").append("<p>Vous avez supprimé la cellule " +  (parseInt(item.getAttribute("ui-child-position"),10)+1) + "</p>");
 			};
-			$.UIDeleteTableCell({selector:"#deletable-items1",toolbar: "#toolbar1", callback: deleteItem});
+			$.UIDeleteTableCell({selector:"#deletable-items1",toolbar: "#toolbar1", callback: deleteItem, deleteButton: "Supprimer", editButton: ["Modifier","OK"]});
 		});
 	</script>
 </head>
@@ -30,7 +30,7 @@
 						<tableview  id="deletable-items1" ui-tablecell-order="stacked">
 							<tablecell ui-implements="add" ui-usage="icon">
 								<img src="images/ipod.png">
-								<celltitle>People</celltitle>
+								<celltitle>Les gens</celltitle>
 							</tablecell>
 							<tablecell ui-implements="add" ui-usage="icon">
 								<img src="images/phone.png">
@@ -38,19 +38,19 @@
 							</tablecell>
 							<tablecell ui-implements="add" ui-usage="icon">
 								<img src="images/mail.png">
-								<celltitle>This is an example of a very long item that will be truncated because it does fit.</celltitle>
+								<celltitle>Ceci est un exemple d'un texte très long qui sera tronquée car elle ne forme.</celltitle>
 							</tablecell>
 							<tablecell ui-implements="add" ui-usage="icon">
 								<img src="images/safari.png">
-								<celltitle>Animals</celltitle>
+								<celltitle>Animaux</celltitle>
 							</tablecell>
 							<tablecell ui-implements="add" ui-usage="icon">
 								<img src="images/sms.png">
-								<celltitle>Food</celltitle>
+								<celltitle>Alimentaires</celltitle>
 							</tablecell>
 							<tablecell ui-implements="add" ui-usage="icon">
 								<img src="images/store.png">
-								<celltitle>Stuff</celltitle>
+								<celltitle>Choses</celltitle>
 							</tablecell>
 						<tablefooter></tablefooter>
 						</tableview>			
