Fixed problem with switch control and split view.
Resolved problem where mask was not getting hidden when root view was in popover.
Fixed problem where the checked state of the check box wasn't getting set properly in switch control.

--- a/examples/switch-control-1.html
+++ b/examples/switch-control-1.html
@@ -54,7 +54,7 @@
 				status : "on",
 				value : "sort of working",
 				callback : function(item) {
-					if (item.checked === false) {
+					if (item.find("input")[0].checked === false) {
 						console.log("This is on!");
 					} else {
 						console.log("This is turned off!!!");
