Update of UIDeleteTableCell.
Added ability to automatically hide the Back button if present when the user selects the Edit button for tableview cell deletion.
Updated Ajax example for this.

--- a/examples/ajax.html
+++ b/examples/ajax.html
@@ -83,6 +83,8 @@
 				// Re-initialize the scrollpanels for new data:
 				$("#view1 scrollpanel").data("ui-scroller").destroy();
 				$("#view1 scrollpanel").data("ui-scroller", new iScroll('#view1 scrollpanel'));
+				// Enable deletion of this tableview's cells:
+				$.UIDeleteTableCell({selector: "#view1 >subview > scrollpanel > tableview", toolbar: "#view1 > navbar"});
 	        });	
 			$.getJSON("recipes.json", function(data) {
 				$('#view2 tableview').empty();
