--- a/examples/subview_transitions-2.html
+++ b/examples/subview_transitions-2.html
@@ -52,17 +52,18 @@
     <script src="../chui/iscroll.js"></script>
     <script type="text/javascript">
         $(function() {
-        	$("view:nth-of-type(2) > navbar > uibutton[ui-bar-align=right]").bind("click", function() {
-        		this.UIToggleButtonLabel("Flip", "Flip Back");
+        	$("#flip > navbar > uibutton[ui-bar-align=right]").bind("click", function() {
+        		console.log(this.nodeName);
+        		$(this).UIToggleButtonLabel("Flip", "Flip Back");
         	});
-        	$("view:nth-of-type(3) > navbar > uibutton[ui-bar-align=right]").bind("click", function() {
-        		this.UIToggleButtonLabel("Fade In", "Fade Out");
+        	$("#pop > navbar > uibutton[ui-bar-align=right]").bind("click", function() {
+        		$(this).UIToggleButtonLabel("Fade In", "Fade Out");
         	});
-        	$("view:nth-of-type(4) > navbar > uibutton[ui-bar-align=right]").bind("click", function() {
-        		this.UIToggleButtonLabel("Pop In", "Close");
+        	$("#spin > navbar > uibutton[ui-bar-align=right]").bind("click", function() {
+        		$(this).UIToggleButtonLabel("Pop In", "Close");
         	});
-        	$("view:nth-of-type(5) > navbar > uibutton[ui-bar-align=right]").bind("click", function() {
-        		this.UIToggleButtonLabel("Spin In", "Spin Out");
+        	$("#spin > navbar > uibutton[ui-bar-align=right]").bind("click", function() {
+        		$(this).UIToggleButtonLabel("Spin In", "Spin Out");
         	});
         	$("#flipbutton").UIFlipSubview("left");
         	$("#fadebutton").UIFadeSubview();
