--- a/examples/paging_horizontal.html
+++ b/examples/paging_horizontal.html
@@ -88,7 +88,7 @@
 		<view id="main" ui-background-style="slanted-right" ui-navigation-status="current">
 			<navbar class="ui-custom-tint">
 				<h1 ui-bar-alignment="center">Paging</h1>
-				<segmentedcontrol ui-implements="segmented-paging" ui-paging="vertical" ui-bar-align="right">
+				<segmentedcontrol ui-implements="segmented-paging" ui-paging="horizontal" ui-bar-align="right">
 				    <uibutton class="ui-custom-tint"  ui-implements="icon">
 				        <icon></icon>
 				    </uibutton>
