--- a/examples/deletion_list.html
+++ b/examples/deletion_list.html
@@ -32,7 +32,7 @@
 				$("#selection_list_response > span").append(comma + text);
 				firstTime = false;
 			};
-			$.UIDeleteTableCell({selector: "tableview", toolbar: "navbar", callback: deleteItem, editButton: ["Yes","No"], deleteButton: "Delete"});
+			$.UIDeleteTableCell({selector: "tableview", toolbar: "navbar", callback: deleteItem, editButton: ["Edit","Done"], deleteButton: "Delete"});
 		});
 	</script>
 </head>
